--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,8 +21,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install wheel
+          pip install build wheel twine
+          pip install -r requirements.txt
 
       - name: Build distribution
         run: |
-          python setup.py sdist bdist_wheel
+          python -m build
